--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.37.5"
   }
 }
