--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2101040063",
+  "name": "wpr2101040063",
   "version": "1.0.0",
   "description": "Simple web-based Email System",
   "main": "server.js",
